--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ footer article img{width:15%;}
 #cor footer article{position:relative;}
 #fim footer article{position:relative;}
 /*SELECT*/
+.tete{opacity:0;-webkit-opacity:0}
 .select ul li{float:left;list-style:none;text-align:center;}
 .select ul li img{width:90%;margin:0 auto;border: 1px solid #CFCFCF;background:rgba(0,0,0,0.10);}
 .select{width:100%;overflow:auto}
